--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,5 +11,9 @@ title: Le Wagon - Middleman
     <p class="about">
       <%= link_to "More about this template", "about.html" %>
     </p>
+    <p class="team">
+      <%= link_to "Meet the team", "team.html", class: "btn btn-primary" %>
+    </p>
+
   </div>
 </div>
